Add XML data processing example and enhance existing scripts with detailed comments
- Introduced a new script `7.obj_XML_Data.scala` for reading and writing XML data using Spark.
- Enhanced `adding_removing_updating_Cols.scala` with comments explaining the process of reading a CSV of bank transactions and performing DataFrame operations.
- Updated `apply.trasformation.scala` to include comments on schema definition and data cleaning processes.
- Improved `ReadingFileWithoutHeader.scala` with comments on manual schema definition and data processing.
- Removed obsolete `obj_Avro_File.scala` as it was no longer needed.
- Enhanced `obj_India.DFonly.scala` with comments clarifying the DataFrame approach to data processing.
- Updated `obj_RDD_Transformation_Actions.scala` with comments explaining RDD transformations and actions.
- Enhanced `obj_WordCount.scala` and `obj_WordCount_Passaggi.scala` with comments detailing the Word Count process.
- Improved `obj_india.RDD_Transformation_Actions.and.DF.scala` with comments on combining RDD and DataFrame examples.
- Enhanced JSON handling scripts `obj_jsonFlatten.scala` and `obj_jsonMultipleLine.scala` with comments on reading and flattening JSON data.
- Updated `obj_logs.scala` with comments on log file processing and filtering.
- Enhanced `obj_IndiaDF.scala` with comments comparing RDD and DataFrame approaches.
- Improved `rdd_Oggetto.scala` with comments on filtering BigBasket product data.